[package]
name = "ethrpc-tinker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrpc = { version = "0.0.8", features = ["http"] }
futures = "0.3.29"
tokio = { version = "1", features = ["full"] }
