[package]
name = "ethrpc-tinker"
version = "0.1.0"
edition = "2021"

[build]
target = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrpc = { version = "0.0.8", features = ["http"] }
futures = "0.3.29"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
